criando metodo post

--- a/aplicacao-web-go/templates/index.html
+++ b/aplicacao-web-go/templates/index.html
@@ -38,6 +38,9 @@
                 </tbody>
             </table>
         </div>
+        <div class="card-footer">
+            <a href="/new-produto" class="btn btn-primary mb-2">Novo produto</a>
+        </div>
     </div>
 </div>
 
