--- a/aplicacao-web-go/templates/index.html
+++ b/aplicacao-web-go/templates/index.html
@@ -1,4 +1,4 @@
-﻿{{define "index"}}
+{{define "index"}}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -24,6 +24,7 @@
                     <th>Descrição</th>
                     <th>Preço</th>
                     <th>Quantidade</th>
+                    <th>Ações</th>
                 </tr>
                 </thead>
                 <tbody>
