--- a/aplicacao-web-go/templates/index.html
+++ b/aplicacao-web-go/templates/index.html
@@ -1,18 +1,10 @@
 {{define "index"}}
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Loja Kaiqui Golang</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+
+{{template "_head"}}
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-    <div class="container">
-        <a class="navbar-brand" href="/">Loja Kaiqui Golang</a>
-    </div>
-</nav>
+
+{{template "_nav"}}
 
 <div class="container">
     <div class="card">
