--- a/aplicacao-web-go/templates/index.html
+++ b/aplicacao-web-go/templates/index.html
@@ -7,7 +7,15 @@
 {{template "_nav"}}
 
 <div class="container">
-    <div class="card">
+        <div class="card">
+            <div class="card-header">
+                <a href="/new-produto" class="btn btn-primary mb-2">Novo produto</a>
+            <a class="btn btn-primary mb-1" href="/insert"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
+                    <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
+                </svg>
+            </a>
+            </div>
         <div class="card-body">
             <table class="table table-striped table-hover">
                 <thead class="table-dark">
@@ -26,14 +34,12 @@
                         <td>{{.Descricao}}</td>
                         <td>R$ {{printf "%.2f" .Valor}}</td>
                         <td>{{.Quantidade}}</td>
-                        <td><a href="/delete?id={{.Id}}" class="btn btn-danger">Remover</a></td>
+                        <td><a href="/edit?id={{.Id}}" class="btn btn-info">Editar</a>
+                            <a href="/delete?id={{.Id}}" class="btn btn-danger">Remover</a></td>
                     </tr>
                 {{end}}
                 </tbody>
             </table>
-        </div>
-        <div class="card-footer">
-            <a href="/new-produto" class="btn btn-primary mb-2">Novo produto</a>
         </div>
     </div>
 </div>
